--- a/Pages/wow-site-style.css
+++ b/Pages/wow-site-style.css
@@ -50,7 +50,7 @@ h2 {
   width: 100%;
 }
 
-body {
+.body {
     width: 100%;
     margin: 0 auto;
 
@@ -60,16 +60,8 @@ body {
 /* Navigation
 ========================================================================== */
 
-.container {
-  display: grid;
-  grid-template-columns: 1fr;
-}
-
-
-.navbar-container-desktop {
-  display: flex;
-  justify-content: space-between;
-  padding: 38px;
+/* top navigation container */
+#nav-container {
   width: 1920px;
   height: 112px;
   padding: 16px 141px 15.9px 138px;
@@ -77,35 +69,61 @@ body {
   background-color: #ffffff;
 }
 
-.right-side {
-  display: flex;
+.column {
+  float: left;
+  padding: 10px;
+  
 }
 
-.nav-wrapper > .right-side > div {
-  margin-right: 20px;
-  font-size: 0.9em;
+.column-2 {
+  float: right;
+  padding: 10px;
+  
 }
 
-.nav-link-wrapper {
-  height: 22px;
-  border-bottom: 1px solid transparent;
-  transition: border-bottom 0.5s;
+.left {
+  width: 25%;
 }
 
-.nav-link-wrapper a {
-  color: #8a8a8a;
+.right {
+  width: 75%;
+}
+
+/* Clear floats after the columns */
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+/* Add a black background color to the top navigation */
+.topnav {
+  Flex: right;
+  background-color: ;
+  overflow: hidden;
+}
+
+/* Style the links inside the navigation bar */
+.topnav a {
+  float: left;
+  color: #707070;
+  text-align: center;
+  padding: 14px 16px;
   text-decoration: none;
-  transition: color 0.5s;
+  font-size: 24px;
 }
 
-.nav-link-wrapper:hover {
-  border-bottom: 1px solid black;
-}
-
-.nav-link-wrapper a:hover {
+/* Change the color of links on hover */
+.topnav a:hover {
+  background-color: #ddd;
   color: black;
 }
 
+/* Add a color to the active/current link */
+.topnav a.active {
+  background-color: #04AA6D;
+  color: white;
+}
 
 
 /*  BUTTONS CSS !!! <<<<!!!!!
