--- a/Pages/Home/Desktop/style.css
+++ b/Pages/Home/Desktop/style.css
@@ -15,5 +15,109 @@ nav {
 }
 
 .logo {
+    padding: 0;
+}
+
+.nav-links {
+    display: flex;
+    justify-content: space-around;
+    width: 24%;
+}
+
+.nav-links li{
+    list-style: none;
+}
+
+.nav-links a{
+    text-decoration: none;
+    letter-spacing: 2px;
+    font-weight: bold;
+    font: 14px;
+    color: #707070;
+}
+
+.burger {
+    display: none;
+}
+
+.burger div{
+    border-radius: 2px;
+    width: 24px;
+    height: 4px;
+    background-color: #707070;
+    margin: 4px;
+}
+
+@media screen and (max-width: 1600px){
+    .nav-links {
+        width: 32%;
+    }
+}
+
+@media screen and (max-width: 1368px){
+    .nav-links {
+        width: 40%;
+    }
+}
+
+@media screen and (max-width: 1280px){
+    .nav-links {
+        width: 40%;
+    }
+}
+
+@media screen and (max-width: 1024px){
+    .nav-links {
+        width: 40%;
+    }
+}
+
+@media screen and (max-width: 768px){
+    body{
+        overflow-x: hidden;
+    } 
     
+    .nav-links {
+        position: absolute;
+        right: 0px;        
+        height: 92vh;
+        top: 8vh;
+        box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.2);
+        background-color: #ffffff;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        width: 100%;
+        transform: translateX(100%);
+        transition: transform 0.5s ease-in;
+        z-index: -1;
+    }
+
+    .nav-links li{
+        opacity: 0;
+    }
+
+    .burger {
+        display: block;
+        cursor: pointer;
+    }
+
+}
+
+.nav-active{
+    transform: translatex(0%)
+}
+
+@keyframes navLinkFade{
+    from{
+        opacity: 0;
+        transform: translatex(50px);
+    }
+    to{
+        opacity: 1;
+        transform: translatex(0px);
+
+    }
+
+
 }
