--- a/Pages/style.css
+++ b/Pages/style.css
@@ -84,7 +84,7 @@ nav {
         height: 92vh;
         top: 8vh;
         box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.2);
-        background-color: #ffffff;
+        background-color: #A3101F;
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -92,6 +92,10 @@ nav {
         transform: translateX(100%);
         transition: transform 0.5s ease-in;
         z-index: -1;
+    }
+
+    .nav-links a{
+        color: #ffffff;    
     }
 
     .nav-links li{
@@ -129,4 +133,14 @@ nav {
 }
 .toggle .line3{
     transform: rotate(+45deg) translate(-5px,-6px);
+}
+
+
+
+
+/*Body ----- */
+
+body {
+    font-family: 'Raleway', sans-serif;
+    font-family: 'Montserrat', sans-serif;
 }
