--- a/Pages/style.css
+++ b/Pages/style.css
@@ -188,7 +188,9 @@ body {
     line-height: 1.21;
     letter-spacing: normal;
     text-align: center;
-    color: #a3101f;
+    background: linear-gradient(to right, #a3101f, #F03044);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
 }
 
 .cta {
@@ -198,19 +200,12 @@ body {
 .more-btn {
     width: 224px;
     height: 64px;
-    margin: 40px 353px 0 328px;
-    padding: 18px 23px 17px;
+    border: none;
     border-radius: 8px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.16);
-    background-color: #1875a3;
-    width: 178px;
+    background-color: #1875a3;   
     font-family: Montserrat;
-    font-size: 24px;
     font-weight: 600;
-    font-stretch: normal;
-    font-style: normal;
-    line-height: 1.21;
-    letter-spacing: normal;
-    text-align: center;
-    color: #ffffff;
+    color:#ffffff;
+    font-size: 24px;
 }
