--- a/Pages/style.css
+++ b/Pages/style.css
@@ -138,7 +138,7 @@ nav {
 }
 
 
-
+/*Home Styling ----------------------------------------------------------------------- */
 
 /*Body ----------------------------------------------------------------------- */
 
@@ -208,4 +208,21 @@ body {
     font-weight: 600;
     color:#ffffff;
     font-size: 24px;
+    cursor: pointer;
 }
+
+
+
+
+
+
+
+
+
+
+
+
+/*About Styling ----------------------------------------------------------------------- */
+
+
+
