--- a/Pages/style.css
+++ b/Pages/style.css
@@ -4,7 +4,7 @@
     box-sizing: border-box;
 }
 
-/*Nav ----------------------------------------------------------------------- */
+/*Nav Style----------------------------------------------------------------------- */
 
 nav {
     display: flex;
@@ -136,6 +136,18 @@ nav {
 .toggle .line3{
     transform: rotate(+45deg) translate(-5px,-6px);
 }
+
+
+
+/*Footer Style ----------------------------------------------------------------------- */
+
+
+
+
+
+
+
+
 
 
 /*Home Styling ----------------------------------------------------------------------- */
