--- a/Pages/style.css
+++ b/Pages/style.css
@@ -338,6 +338,28 @@ body {
 
 
 
+/*Section3 ----------------------------------------------------------------------- */
+
+#section-3 {
+
+}
+
+.sect3-container {
+
+}
+
+.sect3-img {
+
+}
+
+.sect3-head {
+
+}
+
+.sect3-text {
+    
+}
+
 
 
 
